ensure source diff and highlight stretch 100%

--- a/apps/kenniejaydavis/blog/src/scss/styles.scss
+++ b/apps/kenniejaydavis/blog/src/scss/styles.scss
@@ -7,6 +7,10 @@ $breakpoint-lg: 992px;
   --gutter: 1rem;
 }
 
+.grvsc-source {
+  width: 100%;
+}
+
 @media (min-width: $breakpoint-md) {
   :root {
     --font-size: 14px;
